--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
     "react-native-maps": "1.10.0"
